Add Part 4 to mock interviews: 40 production questions across 5 tracks
Track A (Memory & GC), B (JIT & AOT), C (Java versions), D (OOP/SOLID), E (Concurrency) — each 8 questions with toggled answers. All answers cite the source chapter under jvm/ or oop/ so weak answers map back to a specific chapter to revisit.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>